[package]
name = "dmto-ecash"
version = "0.0.1"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8"
sha2 = "0.10"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Schnorr over secp256k1
secp256k1 = { version = "0.29", features = ["rand", "serde"] }

# Storage (example)
dashmap = "5"
